--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 </div>
 
 <br><br>
+This application is <a href="https://github.com/adelespinasse/reverbGen">open source</a>.
+
+<br><br>
 Copyright (c) 2014 by <a href="http://aldel.com">Alan deLespinasse</a>.<br>
 All rights reserved. Absolutely no warranties.<br>
 <br>
