Use browser's sample rate by default. Catch sample rate errors on convolver.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <tr>
     <td><label for="sampleRate">Sample rate:</label></td>
     <td>
-      <input id="sampleRate" type="number" min="22050" max="96000"
+      <input id="sampleRate" type="number" min="8000" max="1000000"
              step="50" value="44100"> samples/s
     </td>
   </tr>
